--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "antd": "^5.20.0",
     "axios": "^1.7.3",
     "framer-motion": "^11.3.21",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
