--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.1",
     "axios": "^1.7.4",
+    "dompurify": "^3.1.6",
     "framer-motion": "^11.3.28",
     "quill": "^2.0.2",
     "quill-image-resize": "^3.0.9",
