--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "axios": "^1.7.4",
     "dompurify": "^3.1.6",
     "framer-motion": "^11.3.28",
+    "lodash": "^4.17.21",
     "quill": "^2.0.2",
+    "quill-better-table": "^1.2.10",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-react": "^3.0.0",
+    "quill-magic-url": "^4.2.0",
+    "quill-video-resize-module": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
