--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "quill-image-resize-module": "^3.0.0",
     "quill-image-resize-module-react": "^3.0.0",
     "quill-magic-url": "^4.2.0",
+    "quill-resize-image": "^1.0.5",
     "quill-video-resize-module": "^1.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
